fix: overflow

--- a/src/global.css
+++ b/src/global.css
@@ -100,6 +100,7 @@ body,html {
     padding: 0;
 }
 body {
+  overflow: hidden;
   background-color: var(--color-background);
   color: var(--color-text);
   font-family: sans-serif;
